       This behavior matches that currently used by IE and Navigator.

Limitations:
    1. JDK 1.2 or higher is required
    2. JavaScript support does not include document.write and some DOM properties


Revision History:
 8-Oct-2002
Acknowledgements:
    Thanks to Richard Harris for adding support for the title attribute for links,
           and for adding the JavaScript Navigator.platform property.

Additions:
    1. Links, forms, and images now have a readable title property.
    2. The navigator object now supports the readable 'platform' property.


 4-Oct-2002
Additions:
    1. WebClient now supports a WebWindowListener which will be called when a new window is opened.

 3-Oct-2002
Acknowledgements:
    Thanks to Geert Bevin for fixing a problem with generation of cookie headers that affects some servers.

Additions:
    1. Following the "_blank" target now creates a new web window, with its own set of frames. Following links or submitting
       forms will update the window from which the request originated. Requests may also now be initiated from an open window.
       The list of open windows is a property of the web client.
    2. The mechanism for searching for tables has been expanded to permit arbitrary search criteria, similar to that
       for links.

Problems fixed:
    1. The cookie header was being generated with a space after each ";" separator.

 2-Oct-2002

Acknowledgements:
    Thanks to Ken Corbin for adding tests for disabled and read-only parameters.

Additions:
    1. WebForm now supports 'isReadOnlyParameter' and 'isDisabledParameter' which allow checking of the state of a
       particular form parameter. Note that if multiple controls exist with the same name, these methods only return
       true when all such controls are read-only or disabled, as appropriate.
    2. RFE #585495 ServletUnit now supports HttpServletResponse.setContentLength.