@@ -34,8 +34,19 @@ Inline and included scripts are supported, as are the following DOM elements:
 <li>appName     - the name of the browser, as set in ClientProperties.setApplicationName()</li>
 <li>appVersion  - the browser version, set in ClientProperties.setApplicationVersion()</li>
 <li>plugins     - an empty array of objects, since plugins are not universally supported</li>
-<li>platform    - the platform for the browser, set in ClientProperties.setPlatform</li>
+<li>platform    - the platform for the browser, set in ClientProperties.setPlatform (1.2 feature)</li>
 <li>userAgent   - the name of the user agent, set by ClientProperties.setUserAgent or derived from the code name and version</li>
+</ul>
+<h4>methods</h4>
+<ul>
+<li>javaEnabled - always returns false to indicate that applets are not supported</li>
+</ul>
+
+<h3>Screen (1.2 feature)</h3>
+<h4>properties</h4>
+<ul>
+<li>availWidth  - the available screen width, set in ClientProperties.setAvailableScreenWidth()</li>
+<li>availHeight - the available screen height, set in ClientProperties.setAvailableScreenHeight()</li>
 </ul>
 <h4>methods</h4>
 <ul>
